-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
Currently the ldlm.namespaces.*.lru_max_age parameter is printed in units of HZ, but that is not a useful unit of measure. Instead this should be exported to userspace in units of ms (which matches the HZ=1000 used by default on RHEL systems, so it won't be a user-visible change). The parameter read/written should be translated into units of HZ in lprocfs.
It would actually be better to have this in units of seconds, but I don't think it is possible to change lru_max_age in a compatible way. Instead, a second parameter could be added like lru_max_seconds that converts from seconds to HZ to set the same parameter, but that is not very critical compared to having constant units between clients.
- is related to
-
LU-9019 Migrate lustre to standard 64 bit time kernel API
-
- Resolved
-